k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-azure-demo
  namespace: k8s-azure-demo
  labels:
    app: k8s-azure-demo
spec:
  type: NodePort
  selector:
    app: k8s-azure-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
