k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-azure-demo
  namespace: k8s-azure-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-azure-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-azure-demo
                port:
                  number: 80
